k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: trustpoint
  labels:
    name: trustpoint
    app: trustpoint
