k8s/trustpoint-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trustpoint
  namespace: trustpoint
  labels:
    app: trustpoint
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
  selector:
    app: trustpoint
